--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Redirect</title>
-    <meta http-equiv="refresh" content="0" url="https://Buachie.github.io/dist/index.html" />
+    <meta http-equiv="refresh" content="0" url="dist/index.html" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
